publish: change meaning for description word
generated from commit 9249af3f26025511b95a3ee356df21d158014ac2

--- a/index.html
+++ b/index.html
@@ -2108,7 +2108,7 @@ curl -X POST <span class="se">\</span>
 <table><thead>
 <tr>
 <th>Error Code</th>
-<th>Meaning</th>
+<th>Description</th>
 </tr>
 </thead><tbody>
 <tr>
